--- a/spec/Generics.tex
+++ b/spec/Generics.tex
@@ -368,10 +368,10 @@ not eliminated by parameter folding.
 
 The compiler diagnostic is defined by the expression list which can
 contain string literals and types.  The diagnostic points to the spot
-in the Chapel program from which the function containing the
-\sntx{compiler-diagnostic-statement} is called.  Compilation typically
-halts if a \chpl{compilerError} is encountered whereas it will
-continue after encountering a \chpl{compilerWarning}.
+in the Chapel program from which the function containing
+the \sntx{compiler-diagnostic-statement} is called.  Compilation halts
+if a \chpl{compilerError} is encountered whereas it will continue
+after encountering a \chpl{compilerWarning}.
 
 \begin{example}
 The following code shows an example of using user-defined compiler
