--- a/spec/Language_Overview.tex
+++ b/spec/Language_Overview.tex
@@ -281,15 +281,15 @@ default initial value for that variable's type is used.
 \chpl{0} \\
 \hline
 \chpl{real} & 64 bits &
-\chpl{real(32)}, \chpl{real(64)}, \chpl{real(128)} &
+\chpl{real(32)}, \chpl{real(64)} &
 \chpl{0.0} \\
 \hline
 \chpl{imag} & 64 bits &
-\chpl{imag(32)}, \chpl{imag(64)}, \chpl{imag(128)} &
+\chpl{imag(32)}, \chpl{imag(64)} &
 \chpl{0.0i} \\
 \hline
 \chpl{complex} & 128 bits &
-\chpl{complex(64)}, \chpl{complex(128)}, \chpl{complex(256)} &
+\chpl{complex(64)}, \chpl{complex(128)} &
 \chpl{0.0 + 0.0i} \\
 \hline
 \chpl{bool} &  & &
