--- a/spec/Types.tex
+++ b/spec/Types.tex
@@ -126,7 +126,7 @@ Like the integral types, the real types can be parameterized by the
 number of bits used to represent them.  The default real
 type, \chpl{real}, is 64 bits.  The real types that are supported are
 machine-dependent, but usually include \chpl{real(32)}
-and \chpl{real(64)}, and sometimes include \chpl{real(128)}.
+and \chpl{real(64)}.
 
 Arithmetic over real values follows the IEEE 754 standard.
 
@@ -141,8 +141,7 @@ represent a complex is twice the number of bits used to represent the
 real numbers.  The default complex type, \chpl{complex}, is 128 bits;
 it consists of two 64-bit real numbers.  The complex types that are
 supported are machine-dependent, but usually
-include \chpl{complex(64)} and \chpl{complex(128)}, and sometimes
-include \chpl{complex(256)}.
+include \chpl{complex(64)} and \chpl{complex(128)}.
 
 The real and imaginary components can be accessed via the methods
 \chpl{re} and \chpl{im}.  The type of these components is real.
@@ -160,8 +159,7 @@ respectively.
 The imaginary types can be parameterized by the number of bits used to
 represent them.  The default imaginary type, \chpl{imag}, is 64 bits.
 The imaginary types that are supported are machine-dependent, but
-usually include \chpl{imag(32)} and \chpl{imag(64)}, and sometimes
-include \chpl{imag(128)}.
+usually include \chpl{imag(32)} and \chpl{imag(64)}.
 
 \begin{rationale}
 The imaginary type is included to avoid numeric instabilities and
