updated spec to reflect some recent changes
Clarified semantics of 1-tuples.  Added example to variable argument
lists as well.

Reworked example in variable argument lists section.

Added parenthesized expressions to the Expressions section and grammar.

Added note about expected future support for real/imag 80/128 and
complex 160/256 to spec.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13798 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Expressions.tex
+++ b/spec/Expressions.tex
@@ -14,6 +14,7 @@ expression:
   query-expression
   cast-expression
   lvalue-expression
+  parenthesized-expression
   unary-expression
   binary-expression
   let-expression
@@ -68,6 +69,18 @@ expression is given by:
 variable-expression:
   identifier
 \end{syntax}
+
+\subsection{Parenthesized Expressions}
+\label{Parenthesized_Expressions}
+
+A \sntx{parenthesized-expression} is an expression that is delimited
+by parentheses as given by:
+\begin{syntax}
+parenthesized-expression:
+  ( expression )
+\end{syntax}
+Such an expression evaluates to the expression.  The parentheses is
+ignored and has only syntactic effect.
 
 \subsection{Call Expressions}
 \label{Call_Expressions}
