updated spec to reflect some recent changes
Mentioned that enumerated constants must be prefixed by the enumerated
type and a dot in the definition of enumerated types.  Added an
example code.

Updated spec uses of enumerated constants in standard modules to use
new member-access-style syntax.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13800 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Locality_and_Distribution.tex
+++ b/spec/Locality_and_Distribution.tex
@@ -57,7 +57,7 @@ Returns the number of processor cores available on a given locale.
 
 \begin{protohead}
 use Memory;
-def locale.physicalMemory(unit: MemUnits=Bytes, type retType=int(64)): retType;
+def locale.physicalMemory(unit: MemUnits=MemUnits.Bytes, type retType=int(64)): retType;
 \end{protohead}
 \begin{protobody}
 Returns the amount of physical memory available on a given locale in
