Getting GASNet license information in order
* added a README to the third-party/gasnet directory
  that gives an overview of GASNet, points to the
  official distribution, details our modifications,
  etc. as requested by Dan Bonachea from the GASNet
  team.

* added a README to the third-party directory to
  describe the packages that it contains (currently
  only GASNet from the user's perspective) and
  point to further information.

* added a README.devel to the same directory for
  use by developers (who will have additional
  packages installed here)

* updated our top-level LICENSE file to point out
  that code in the etc/ and third-party/ directories
  may have their own licenses.

* updated the top-level README to point to some of
  these new READMEs

* updated the AGREEMENT file to have the new version
  number (other files will require this as well).

* updated gen_release to include these new READMEs
  and to get the third-party/Makefile which I had
  overlooked before.




git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13802 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/README
+++ b/README
@@ -5,8 +5,8 @@ Chapel Compiler Release: top-level README
 This is a preliminary release of the Chapel compiler, intended for use
 by a small audience for evaluation and feedback purposes.  See the
 LICENSE file for information about legal usage, and please also keep
-in mind any user agreement that you have made regarding the intended
-use of this release.
+in mind the user agreement that you have made regarding this release,
+available for your reference in the AGREEMENT file.
 
 
 -----------
@@ -79,3 +79,5 @@ For more detailed information about...      refer to...
   ...calling C routines from Chapel          ...doc/README.extern
   ...formatting value-to-string conversions  ...doc/README.format
   ...notes for Cygwin users                  ...doc/README.cygwin
+  ...third-party software that we use        ...third-party/README
+  ...the GASNet communication library        ...third-party/gasnet/README
